cdrkit (1.0pre4) UNRELEASED; urgency=low

  [ Eduard Bloch ]
  * Added checks for libcam to make (k)FreeBSD compilation work (untested)
  * added clarifications about changes to all source files
  * adapted initial message to display the copyright more clearly

  [ Peter Samuelson ]
  * Cleanups: unused macros/defines
  * Unified and simplified the build-host data crawling methods

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 23:36:58 +0200

cdrkit (1.0pre3) unstable; urgency=low

  [ Eduard Bloch ]
  * Added FAQ ("where wodim name comes from")
  * Moved the NULL pointer check on cdr_t to a place before it is used for DVD
    feature checks (otherwise it would crash when run on any pure CD-ROM
    reader)
  * Added test for WORDS_BIGENDIAN
  * copied values from align.h to another set of sizeof-reflecting defines in
    xconfig.h
  * workarounds for almost all "you are not allowed to modify that {version
    checking,quality assurance,other-important-looking-wording}" parts,
    replacing the output of "schily" where the commend said that we are forced
    to. One part in cdrecord.c still remains, the comment sounds too dangerous
    to be touched.
  * forced FIFO define, suggested by Peter

  [ Peter Samuelson ]
  * Created cmake test and code snippet for HAVE_C_BITFIELDS

  [ Michael Ablassmeier ]
  * Typo fixes in mkisofs messages and unified identical ones with a macro

  [Joerg Jaspert]
  * Released as 1.0pre3

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 09:56:38 +0200

cdrkit (1.0pre2) RELEASED; urgency=low

  * Took zisofs_tools out of the global build system and restored its original
    Makefile. Its own build system works better.

 -- Eduard Bloch <blade@debian.org>  Sun, 03 Sep 2006 22:14:31 +0200

cdrkit (1.0pre1) RELEASED; urgency=low

  [ See http://bugs.debian.org/$BUGNR for detailed explanations ]
  * The Big Fork to an independent project called cdrkit
    + using the last clearly stated GPLed versions of files from