@@ -1,4 +1,6 @@
-#ident @(#)cdrecord.dfl	1.5 06/22/06 Copyr 2006 E. Bloch
+#ident @(#)wodim.dfl	1.5 06/22/06 Copyr 2006 E. Bloch
+#
+# This file is /etc/default/wodim
 #
 #ident @(#)cdrecord.dfl	1.5 05/08/09 Copyr 1998 J. Schilling
 #
@@ -17,7 +19,7 @@ CDR_DEVICE=cdrom
 # Note that newer cdrecord versions do not default
 # to speed=1. For MMC compliant drives, the default
 # is to write at maximum speed, so it in general does
-# not make sense to set up a default speed in /etc/default/cdrecord 
+# not make sense to set up a default speed in /etc/default/wodim 
 #
 #CDR_SPEED=40
 
@@ -32,7 +34,7 @@ CDR_DEVICE=cdrom
 # the characters ',', ':', '/' and '@'
 #
 # Unless you have a good reason, use speed == -1 and let
-# cdrecord use it's internal drive specific defaults.
+# wodim use it's internal drive specific defaults.
 #
 # drive name	device	speed	fifosize driveropts
 #
