@@ -39,7 +39,7 @@ Some naming explanations:
 	IDE	Integrated Drive Electronics (A Drive that includes ATA)
 	ATAPI	ATA Packet Interface
 
-When cdrecord has problems with ATAPI drives on Linux this usually is a Linux 
+When wodim has problems with ATAPI drives on Linux this usually is a Linux 
 kernel problem. The Linux kernel maintainers unfortunately refuse to correct
 their current IDE driver system setup which does not support ATAPI by default.
 ATAPI _is_ SCSI over IDE transport. It is hard to understand why Linux still
@@ -91,8 +91,8 @@ Which Operating systems support ATAPI
 
 	-	Linux-2.4.xx includes a CDROM Packet interface in the
 		IDE CD driver. For this driver libscg now includes
-		support in pre-alpha status. Use cdrecord dev=ATAPI -scanbus
-		to check for drives and e.g. cdrecord dev=ATAPI:0,0 ....
+		support in pre-alpha status. Use wodim dev=ATAPI -scanbus
+		to check for drives and e.g. wodim dev=ATAPI:0,0 ....
 		for writing. Note that this interface is not integrated into
 		the standard libscg device naming scheme. Support for
 		this interface has been included because it is the only
@@ -103,8 +103,8 @@ Which Operating systems support ATAPI
 	-	Starting with Linux-2.5.45, there is a new experimental
 		ATAPI interface initiated by Linus Torvalds. Unfortunately,
 		this interface does not fit well into the rest of the Linux
-		SCSI kernel transport naming scheme. Cdrecord allows to
-		use this interface by calling e.g. cdrecord dev=ATA:1,0,0 ...
+		SCSI kernel transport naming scheme. Wodim allows to
+		use this interface by calling e.g. wodim dev=ATA:1,0,0 ...
 
 	All Linux ATAPI transport implementations do not support DMA.
 	Current exceptions are:
@@ -159,7 +159,7 @@ Which Operating systems support ATAPI
 	to Sun's internal structuring rules. You need to use the USCSI interface
 	on for ATAPI drives on Solaris sparc for this reason.
  
-	Solaris 8 sparc has a ATA DMA bug that prevents cdrecord from working at all.
+	Solaris 8 sparc has a ATA DMA bug that prevents wodim from working at all.
 	There is a fix from Sun available: the patch 108974-16 
 	Solaris 9 sparc works again, it has the fix for the ATA DMA bug included.
 
@@ -171,9 +171,9 @@ Which Operating systems support ATAPI
 -	Win32 using a recent ASPI Layer supports ATAPI
 	You nay need to exclude mini port drivers (see README.win32).
 
-	Newer cdrecord versions also support the SPTI (SCSI Pass through ioctl).
+	Newer wodim versions also support the SPTI (SCSI Pass through ioctl).
 	Libscg uses SPTI by default if you are running NT-5.x or newer and are
-	administrator. With NT-4.x it may be possible to run cdrecord dev=SPTI:1,0.0 ...
+	administrator. With NT-4.x it may be possible to run wodim dev=SPTI:1,0.0 ...
 	But there are reports for blue screens (kernel crashes).
 
 -	DOS DOS-7 from win98 includes a ATAPI aware aspi
@@ -207,10 +207,10 @@ IDE 1	MSTR	->	HD2	(holds CD mastering data)
 IDE 1	SLAV	->	CD-ROM
 
 If cou cannot set up a decent cabling (e.g. because you use a notebook)
-you may try to use cdrecord -immed ...
+you may try to use wodim -immed ...
 It runs slow commands in quick (immediate) return background mode and
 tries to wait between the write commands to allow to free the IDE cable
-so the cdrecord read process may fill the FIFO from the other drive
+so the wodim read process may fill the FIFO from the other drive
 on the same IDE cable.
 
 /*--------------------------------------------------------------------------*/
@@ -220,7 +220,7 @@ This was taken out of mails from From: Dave Cohen <dcohen@richmond.infi.net>
 and From: Gadi Oxman <gadio@netvision.net.il>
 (slightly modified marked ***JS *** except typo corrects)
 
-As all actual Linux versions have ATAPI support for cdrecord,
+As all current Linux versions have ATAPI support for wodim,
 I removed the patch section. If you are running a Linux version
 that does not support ATAPI<->SCSI command transport, please upgrade.
 
@@ -235,7 +235,7 @@ modifications needed for ATAPI drives and is still working with other
 SCSI drives. Older revisions of cdrecord do not support ATAPI drives.
 
 If you are using Linux Kernel version prior to 2.1.73 or prior to
-2.0.35, please upgrade before you try to compile and use cdrecord.
+2.0.35, please upgrade before you try to compile and use wodim.
 
 In any case, you need to configure a kernel with ATAPI/SCSI hostadapter
 emulation. Read carefully the following instructions:
@@ -289,11 +289,11 @@ what you have. The HP 7100 and 7110  CD rewritables use the ATAPI
 standard. Originally, the drives were not supported under Linux (due to
 some inconsistencies with SCSI translations between the kernel and the
 CD), but that problem has just recently been fixed. There are some kernel
-and cdrecord patches that have been made to support this device that have
+and wodim patches that have been made to support this device that have
 yet to be officially incorporated into cdwrite and the kernel. In order to
 get your drive supported under Linux, you will have to do the following:
 
-1. Get the proper version of cdrecord.
+1. Get the proper version of wodim.
 
 As of this writing, I am just getting ready to test Joerg's new cdrecord.
 I am currently operational on cdrecord-1.5, so I know that works, and I
@@ -307,7 +307,7 @@ patches are valid for this version, but i'll know soon enough.
 
 BTW, the new version of xcdroast now supports cdrecord - this version
 is in beta testing, too (currently uses cdrecord-1.5 but cdrecord-1.6a5
-should work with the actual xcdroast too).  
+should work with the current xcdroast too).  
 
 2. Upgrade to kernel version 2.0.31
 
@@ -372,7 +372,7 @@ any other IDE CD-writer unit):
    fine, your CDROM units should show up with a message like:
  "hdb: HP CD-Writer+ 7100, ATAPI CDROM drive - enabling SCSI emulation"
 
-7) run "cdrecord -scanbus" to make sure cdrecord can see the unit and
+7) run "wodim -scanbus" to make sure wodim can see the unit and
    talk to it.  The end.
 
 Don't forget that now -all- of your CD drives are seen as -SCSI- units
@@ -384,7 +384,7 @@ work again.
 -------------------------------------------------------------------------------
 NOTE: 
 
-1)	Actual cdrecord releases support ATAPI
+1)	Current wodim releases support ATAPI
 
 2)	Linux 2.0.35 or Linux 2.1.73 or later include ATAPI support
 -------------------------------------------------------------------------------
@@ -488,16 +488,16 @@ Situation:
       ln -s scd0 cdrom # NOTE: or cdrw, first check which drive is here
       ln -s scd1 cdrw  # NOTE: see above, maybe cdrom
    Check the new SCSI settings:
-      cdrecord -scanbus
-   Setup cdrecord's environment - edit /etc/default/cdrecord:
+      wodim -scanbus
+   Setup wodim's environment - edit /etc/default/wodim:
       CDR_DEVICE=cdrw
       cdrw=1,0,0        4       8m
       cdrom=1,2,0       0       0m
    Input the right values, the fields are described in the manpage
-   of cdrecord. Alternatively, you may use this values as
-   cdrecord-parameter or take a frontend with an own configuration
-   scheme, then you don't need to modify /etc/default/cdrecord.
-9. It's done! Insert a CD and try "cdrecord -v -toc"
+   of wodim. Alternatively, you may use this values as
+   wodim-parameter or take a frontend with an own configuration
+   scheme, then you don't need to modify /etc/default/wodim.
+9. It's done! Insert a CD and try "wodim -v -toc"
 /*--------------------------------------------------------------------------*/
 He had constant buffer underrun problems:
 
@@ -557,22 +557,22 @@ Hints for the Linux Packet code in ide-cdrom.c:
 
 	To use: call e.g.
 
-		cdrecord -scanbus dev=ATAPI:
+		wodim -scanbus dev=ATAPI:
 
-		cdrecord -dao -v speed=24 dev=ATAPI:0,0 ....
+		wodim -dao -v speed=24 dev=ATAPI:0,0 ....
 
 	Be careful! This code is only needed in order to be able to use
 	PCATA CD-writers on notebooks because there is a severe kernel bug.
 	Unfortunately, this bug causes the kernel to hang (and force you
 	to reboot) if you try to call:
 
-		cdrecord -scanbus
+		wodim -scanbus
 
 	without the dev=ATAPI: option. 
 
-	In this case cdrecord will hang infintely and unkillable 
+	In this case wodim will hang infintely and unkillable 
 	in open("/dev/sg1", 2) => you need to reboot :-(
 
 	Repeat by: Insert a PCATA CD-Writer in a Sony VAIO notebook and run
-			cdrecord -scanbus. 
+			wodim -scanbus. 
 
