@@ -177,7 +177,7 @@ If the argument to the
 .B dev=
 option does not contain the characters ',', '/', '@' or ':',
 it is interpreted as an label name that may be found in the file
-/etc/default/cdrecord (see FILES section).
+/etc/default/wodim (see FILES section).
 .sp
 The options
 .B \-i
@@ -250,7 +250,7 @@ sites. Despite the name, the software is not beta.
 .TP
 .B CDR_DEVICE
 This may either hold a device identifier that is suitable to the open
-call of the SCSI transport library or a label in the file /etc/default/cdrecord.
+call of the SCSI transport library or a label in the file /etc/default/wodim.
 .TP
 .B RSH
 If the 
