@@ -98,7 +98,7 @@ If the argument to the
 .B dev=
 option does not contain the characters ',', '/', '@' or ':',
 it is interpreted as an label name that may be found in the file
-/etc/default/cdrecord (see FILES section).
+/etc/default/wodim (see FILES section).
 .TP
 .BI timeout= #
 Set the default SCSI command timeout value to 
